<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="book" type="com.example.max.googlebooks.book.Book"/>
        <variable name="ic_launcher" type="android.graphics.drawable.Drawable"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/book_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context="com.example.max.googlebooks.bookdetails.view.BookDetailFragment"
        android:animateLayoutChanges="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coverImage"
                android:layout_width="128dp"
                android:layout_height="192dp"
                android:background="#ddd"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:padding="1dp"
                app:imageUrl="@{book.getCoverImageLink()}"
                app:error="@{@mipmap/ic_launcher}"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_toRightOf="@+id/coverImage"
                android:layout_toEndOf="@id/coverImage"
                android:text="@{book.volumeInfo.title}"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_below="@+id/title"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:text="@{book.volumeInfo.authors}"/>

            <TextView
                android:id="@+id/publishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/author"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_marginTop="4dp"
                android:text="@{book.volumeInfo.publishedDate}"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_below="@+id/publishedDate"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_marginTop="6dp"
                android:rating="@{book.volumeInfo.averageRating}"/>

            <TextView
                android:id="@+id/ratingsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ratingBar"
                android:layout_toEndOf="@+id/ratingBar"
                android:layout_alignTop="@+id/ratingBar"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:drawableRight="@drawable/ic_person_grey_16dp"
                android:drawableEnd="@drawable/ic_person_grey_16dp"
                android:text="@{String.valueOf(book.volumeInfo.ratingsCount)}"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@{book.volumeInfo.description}"
            android:visibility="@{(book.volumeInfo.description != null &amp;&amp; !book.volumeInfo.description.isEmpty()) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/webReaderLinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_reader_label"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="@{(book.accessInfo.webReaderLink != null &amp;&amp; !book.accessInfo.webReaderLink.isEmpty()) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/webReaderLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(book.accessInfo.webReaderLink != null &amp;&amp; !book.accessInfo.webReaderLink.isEmpty()) ? View.VISIBLE : View.GONE}"
            android:autoLink="web"
            android:text="@{book.accessInfo.webReaderLink}"/>

        <TextView
            android:id="@+id/languageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_label"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="@{(book.volumeInfo.language != null &amp;&amp; !book.volumeInfo.language.isEmpty()) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(book.volumeInfo.language != null &amp;&amp; !book.volumeInfo.language.isEmpty()) ? View.VISIBLE : View.GONE}"
            android:text="@{book.volumeInfo.language}"/>

        <TextView
            android:id="@+id/publisherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher_label"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="@{(book.volumeInfo.publisher != null &amp;&amp; !book.volumeInfo.publisher.isEmpty()) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(book.volumeInfo.publisher != null &amp;&amp; !book.volumeInfo.publisher.isEmpty()) ? View.VISIBLE : View.GONE}"
            android:text="@{book.volumeInfo.publisher}"/>

        <TextView
            android:id="@+id/pagesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages_label"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="@{(book.volumeInfo.pageCount > 0) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(book.volumeInfo.pageCount > 0) ? View.VISIBLE : View.GONE}"
            android:text="@{String.valueOf(book.volumeInfo.pageCount)}"/>

        <TextView
            android:id="@+id/categoriesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories_label"
            android:layout_marginTop="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="@{(book.volumeInfo.categories != null &amp;&amp; !book.volumeInfo.categories.isEmpty()) ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(book.volumeInfo.categories != null &amp;&amp; !book.volumeInfo.categories.isEmpty()) ? View.VISIBLE : View.GONE}"
            android:text="@{book.volumeInfo.categories}"/>
    </LinearLayout>
</layout>